--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -58,4 +58,4 @@ $box-shadow: 0px 0px 1rem 0px rgba($text-color, 0.2);
 // logo
 $logo-width: 100px;
 $logo-height: 100px;
-$logo-url: '../img/logo/logo.jpg';
+$logo-url: '../img/logo/logo.png';
