--- a/src/scss/sections/_response.scss
+++ b/src/scss/sections/_response.scss
@@ -1,8 +1,8 @@
 .response {
-    @extend %popup;
+    @extend .popup;
 
     &__wrapper {
-        @extend %popup__wrapper;
+        @extend .popup__wrapper;
         // width: 600px;
     }
 }
