--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -1,9 +1,10 @@
-%popup {
+.popup {
     & {
         position: fixed;
         top: 0;
-        height: 100vh;
-        width: 100%;
+        right: 0;
+        bottom: 0;
+        left: 0;
         background: rgba(0, 0, 0, 0.5);
         @extend %flex-c;
     }
