--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -59,3 +59,9 @@ $box-shadow: 0px 0px 1rem 0px rgba($text-color, 0.2);
 $logo-width: 100px;
 $logo-height: 100px;
 $logo-url: '../img/logo/logo.png';
+
+// popup
+$popup-background: rgba(0, 0, 0, 0.5);
+$popup-wrapper-background: $white;
+$popup-width: 600px;
+$popup-padding: 3rem;
