--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,8 +13,9 @@
 @import 'components/aside';
 @import 'components/footer';
 
-@import 'sections/access';
-@import 'sections/response';
+// @import 'sections/';
+@import 'sections/popups/access';
+@import 'sections/popups/response';
 
 // @import 'D:/WebDevelopment/Projects/LIBS/militerslider/militerslider';
 // @import 'includes/slider';
