--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -15,4 +15,5 @@
 @import 'components/footer';
 
 @import 'sections/newpage';
-@import '../sections/response';
+// @import '../sections/response';
+@import '../sections/popups/response';
